kubernetes/base/flasher/admin-v2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-v2
  template:
    metadata:
      labels:
        app: admin-v2
    spec:
      volumes:
        - name: nginx-conf-d-volume-admin-v2
          configMap:
            name: nginx-conf-d-config-admin-v2
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - image: registry.gitlab.com/flasher/flasher/flasher-admin-v2:1.9.0
          imagePullPolicy: Always
          name: admin-v2
          command:
            - "nginx"
            - "-g"
            - "daemon off;"
          ports:
            - name: http-admin-v2
              containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
