kubernetes/base/flasher/admin-v2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-v2
  labels:
    app: admin-v2
    service: admin-v2
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: admin-v2
